--- a/Project.toml
+++ b/Project.toml
@@ -6,14 +6,22 @@ authors = [
 ]
 version = "1.0.0"
 
+[weakdeps]
+StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
+
 [deps]
 BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
 BioSymbols = "3c28c6f8-a34d-59c4-9654-267d177fcfa9"
+StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
+
+[extensions]
+StringViewsExt = "StringViews"
 
 [compat]
 BioSequences = "3.1.3"
 Random = "1.10"
 julia = "1.8"
+StringViews = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
